# axum_api

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/middlewares/: logger.rs
src/routes/: auth.rs  mod.rs  sample.rs  user.rs
