[package]
name    = "axum_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = "0.7.2"
serde         = { version = "1.0.190", features = ["derive"] }
serde_json    = "1.0.108"
tokio         = { version = "1.33.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http    = { version = "0.5.0", features = ["fs"] }
