[package]
name    = "demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "demo"
path = "src/lib.rs"

[dependencies]
axum            = "0.7.2"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel          = { version = "2.1.4", features = ["postgres"] }
diesel-async    = { version = "0.4.1", features = ["postgres", "bb8"] }
dotenvy         = "0.15.7"
serde           = { version = "1.0.190", features = ["derive"] }
serde_json      = "1.0.108"
tokio           = { version = "1.33.0", features = ["full"] }
tower-cookies   = "0.10.0"
tower-http      = { version = "0.5.0", features = ["fs"] }
